my_microservices_project/kubernetes/order_management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-management
  template:
    metadata:
      labels:
        app: order-management
    spec:
      containers:
        - name: order-management
          image: koushikpk.azurecr.io/my-microservices-project/order-management:latest
          ports:
            - containerPort: 80
