my_microservices_project/kubernetes/product_catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      containers:
        - name: product-catalog
          image: koushikpk.azurecr.io/product_catalog:latest
          ports:
            - containerPort: 80
