my_microservices_project/kubernetes/user_management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - name: user-management
          image: my-microservices-project/user_management:latest
          ports:
            - containerPort: 80
