my_microservices_project/kubernetes/order-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-management
spec:
  selector:
    app: order-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort  # Change the type to NodePort
