my_microservices_project/kubernetes/product-catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
spec:
  selector:
    app: product-catalog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
