my_microservices_project/kubernetes/user-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management
spec:
  selector:
    app: user-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort  # Change the type to NodePort
