my_microservices_project/kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-microservices-ingress
spec:
  rules:
    - host: frontend.koushikweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: order.koushikweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-management
                port:
                  number: 80
    - host: product.koushikweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-catalog
                port:
                  number: 80
    - host: user.koushikweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-management
                port:
                  number: 80
