my_microservices_project/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: frontend.koushik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: order.koushik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-management
                port:
                  number: 80
    - host: product.koushik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-catalog
                port:
                  number: 80
    - host: user.koushik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-management
                port:
                  number: 80
